@@ -13,6 +13,7 @@ Version 0.91.0:
 - Pointer arithmetic on procedure pointers is now disallowed. It is not meaningful, because procedures do not have a fixed size and are not arranged like array elements.
 - A bug in array index parsing could cause the compiler to crash due to arrays being used without index, instead of showing an error message
 - ON GOTO was broken due to the compiler generating bad jump tables for it
+- SETMOUSE (win32/unix): allow one mouse coordinate to be changed without affecting the other
 
 
 Version 0.90.0 (former 0.25.0):
